--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,11 @@
 {
+  "globals": {
+    "NodeJS": true
+  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "tsconfig.json",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "tsconfig.json"
   },
   "settings": {
     "import/parsers": {
@@ -18,47 +21,47 @@
     }
   },
   "extends": [
-    "airbnb-base",
-    "airbnb-typescript/base",
+    "plugin:@typescript-eslint/recommended",
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:import/typescript"
-  ],
-  "plugins": [
-    "@typescript-eslint"
   ],
   "root": true,
   "env": {
     "node": true,
     "jest": true
   },
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "ignorePatterns": [
     ".eslintrc.json"
   ],
   "rules": {
     "linebreak-style": 0,
+    "arrow-body-style": [
+      "error",
+      "as-needed"
+    ],
+    "@typescript-eslint/array-type": "warn",
     "@typescript-eslint/brace-style": [
       "error",
       "stroustrup"
     ],
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/camelcase": [
       "off"
     ],
     "@typescript-eslint/explicit-function-return-type": [
       "warn"
     ],
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/indent": [
-      "error",
-      2,
-      {
-        "SwitchCase": 1
-      }
-    ],
-    "@typescript-eslint/interface-name-prefix": "off",
-    "@typescript-eslint/lines-between-class-members": "off",
+    "@typescript-eslint/comma-spacing": "error",
+    "@typescript-eslint/consistent-type-assertions": "warn",
+    "@typescript-eslint/func-call-spacing": "warn",
+    "@typescript-eslint/indent": ["error", 2, {
+      "SwitchCase": 1
+    }],
     "@typescript-eslint/naming-convention": [
       "error",
       {
@@ -81,6 +84,9 @@
         }
       }
     ],
+    "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/lines-between-class-members": "off",
+    "@typescript-eslint/member-delimiter-style": "warn",
     "@typescript-eslint/no-explicit-any": [
       "warn"
     ],
@@ -99,7 +105,6 @@
         "ignoreEnums": true
       }
     ],
-    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-this-alias": [
       "error",
       {
@@ -110,83 +115,23 @@
     ],
     "@typescript-eslint/no-parameter-properties": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-throw-literal": "warn",
     "@typescript-eslint/no-unsafe-call": "warn",
-    "@typescript-eslint/no-unsafe-member-access": "warn",
     "@typescript-eslint/no-unsafe-return": "off",
-    "@typescript-eslint/prefer-for-of": "error",
+    "@typescript-eslint/no-unsafe-member-access": "warn",
+    "@typescript-eslint/no-unnecessary-boolean-literal-compare": "warn",
+    "@typescript-eslint/no-unnecessary-condition": "warn",
+    "@typescript-eslint/prefer-for-of": "warn",
+    "@typescript-eslint/prefer-includes": "warn",
+    "@typescript-eslint/prefer-optional-chain": "warn",
+    "@typescript-eslint/prefer-string-starts-ends-with": "warn",
+    "@typescript-eslint/quotes": ["warn", "single"],
+    "@typescript-eslint/require-array-sort-compare": "warn",
+    "@typescript-eslint/type-annotation-spacing": "warn",
     "@typescript-eslint/space-before-function-paren": [
       "error",
       "never"
-    ],
-    "arrow-body-style": [
-      "error",
-      "as-needed"
-    ],
-    "array-bracket-spacing": [
-      "error"
-    ],
-    "arrow-spacing": [
-      "error"
-    ],
-    "array-element-newline": [
-      "error",
-      {
-        "ArrayExpression": "consistent",
-        "ArrayPattern": {
-          "minItems": 5
-        }
-      }
-    ],
-    "block-spacing": [
-      "error"
-    ],
-    "brace-style": "off",
-    "callback-return": [
-      "error"
-    ],
-    "class-methods-use-this": "off",
-    "comma-spacing": [
-      "error"
-    ],
-    "comma-style": [
-      "error",
-      "last"
-    ],
-    "curly": [
-      "error",
-      "all"
-    ],
-    "default-case": [
-      "error"
-    ],
-    "eol-last": [
-      "error"
-    ],
-    "eqeqeq": [
-      "error"
-    ],
-    "func-call-spacing": [
-      "error",
-      "never"
-    ],
-    "func-style": [
-      "error",
-      "expression"
-    ],
-    "generator-star-spacing": [
-      "error",
-      {
-        "before": true,
-        "after": true
-      }
-    ],
-    "import/extensions": [
-      "error",
-      {
-        "ignorePackages": true,
-        "ts": "never",
-        "tsx": "never"
-      }
     ],
     "import/order": [
       "error",
@@ -218,8 +163,6 @@
         ]
       }
     ],
-    "import/no-default-export": "error",
-    "import/prefer-default-export": "off",
     "init-declarations": [
       "error"
     ],
@@ -471,6 +414,51 @@
     ],
     "strict": [
       "error"
-    ]
+    ],
+    "import/no-default-export": "error",
+    "import/prefer-default-export": "off",
+    "arrow-spacing": [
+      "error"
+    ],
+    "block-spacing": [
+      "error"
+    ],
+    "callback-return": [
+      "error"
+    ],
+    "array-element-newline": [
+      "error",
+      {
+        "ArrayExpression": "consistent",
+        "ArrayPattern": {
+          "minItems": 5
+        }
+      }
+    ],
+    "array-bracket-spacing": "error",
+    "arrow-parens": ["warn", "as-needed"],
+    "computed-property-spacing": "warn",
+    "consistent-return": "warn",
+    "curly": ["warn", "all"],
+    "eol-last": "warn",
+    "eqeqeq": "warn",
+    "new-cap": ["warn", {
+      "capIsNewExceptions": [
+        "Global",
+        "Injectable",
+        "Module"
+      ]
+    }],
+    "new-parens": "warn",
+    "no-nested-ternary": "warn",
+    "object-curly-spacing": ["warn", "always"],
+    "quote-props": ["warn", "consistent-as-needed"],
+    "sort-imports": "warn",
+    "space-in-parens": "warn",
+    "space-unary-ops": "warn",
+    "spaced-comment": ["warn", "always"],
+    "yoda": ["warn", "always", {
+      "onlyEquality": true
+    }]
   }
 }
