--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-shop-nestjs-microservice-boilerplate",
+  "name": "e-shop-collector",
   "version": "0.0.1",
   "description": "",
   "author": "kartashov_egor96@mail.ru",
@@ -33,12 +33,18 @@
     "@nestjs/platform-fastify": "10.3.8",
     "@nestjs/swagger": "7.3.1",
     "@nestjs/terminus": "10.2.3",
+    "@wildegor/e-shop-nodepack": "1.0.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
+    "axios": "^1.6.8",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "fastify": "^4.26.2",
+    "luxon": "^3.4.4",
     "reflect-metadata": "0.2.2",
     "rimraf": "5.0.5",
     "rxjs": "7.8.1",
+    "sqlstring": "^2.3.3",
     "uuid": "9.0.1"
   },
   "devDependencies": {
@@ -46,15 +52,15 @@
     "@nestjs/schematics": "10.1.1",
     "@nestjs/testing": "10.3.8",
     "@types/jest": "29.5.12",
+    "@types/luxon": "^3.4.2",
     "@types/node": "20.12.7",
+    "@types/sqlstring": "^2.3.2",
     "@types/supertest": "2.0.16",
-    "@typescript-eslint/eslint-plugin": "5.47.1",
-    "@typescript-eslint/parser": "5.47.1",
-    "class-validator": "0.13.2",
-    "eslint": "8.22.0",
+    "@typescript-eslint/eslint-plugin": "6.14.0",
+    "@typescript-eslint/parser": "6.14.0",
+    "class-validator": "0.14.1",
+    "eslint": "8.55.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "3.5.2",
     "eslint-plugin-import": "2.26.0",
