fix: some errors

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,16 @@
 APP_PORT=8080
 APP_NAME=app
 APP_MODE=develop
+
+CLICKHOUSE_HOST=127.0.0.1
+CLICKHOUSE_PORT=8123
+CLICKHOUSE_USER=default
+CLICKHOUSE_PASS=
+CLICKHOUSE_DB=e_shop_db
+
+AMQP_URI=amqp://guest:guest@127.0.0.1:5672/
+CONSUMER_QUEUE=collector
+
+CHUNK_LIFE_MS=1000
+CHUNK_SIZE=1
+CHUNK_INTERVAL_MS=5000
