--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node": "20.12.7",
     "@types/sqlstring": "^2.3.2",
     "@types/supertest": "2.0.16",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "6.14.0",
     "@typescript-eslint/parser": "6.14.0",
     "class-validator": "0.14.1",
